--- a/pages/posts/post.wxss
+++ b/pages/posts/post.wxss
@@ -1,3 +1,4 @@
+@import "post-item/post-item-template.wxss";
 swiper {
     width:100%;
     height:500rpx;
@@ -19,27 +20,3 @@ swiper image {
     padding-bottom: 5px;
 }
 
-.post-author-date {
-    margin: 10rpx 0 20rpx 10rpx;
-}
-
-.post-author {
-    width: 60rpx;
-    height: 60rpx;
-    vertical-align: middle;
-}
-
-.post-date {
-    margin-left: 20rpx;
-    vertical-align: middle;
-    margin-bottom: 5px;
-    font-size: 26rpx;
-}
-
-.post-title {
-    font-size: 34rpx;
-    font-weight: 600;
-    color: #333;
-    margin-bottom: 10px;
-    margin-left: 10px;
-}
