--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,8 +1,8 @@
 <!--wxml 是编写小程序骨架的文件-->
 <view class="container">
-    <image class="user-avatar" src="/images/1122.jpg"></image>
+    <image class="user-avatar" src="/images/avatar/2.png"></image>
     <text class="user-name"><text style="color:red;">Hello</text>,D-ring</text>
-    <view class="moto-container">
+    <view class="moto-container" bindtap="onTap">
         <text class="moto">开启小程序之旅</text>
     </view>
 </view>
