--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,3 +1,19 @@
-<text>
-    文章详情
-</text>
+<view class="container">
+    <image class="head-image" src="{{postData.headImgSrc}}"></image>
+    <image class="audio"  src="/images/music/music-start.png"></image>
+    <view class="author-date">
+        <image class="avatar" src="{{postData.avatar}}"></image>
+        <text class="author">{{postData.author}}</text>
+        <text class="const-text">发表于</text>
+        <text class="date">{{postData.dateTime}}</text>
+    </view>
+    <text class="title">{{postData.title}}</text>
+    <view class="tool">
+        <view class="circle-image">
+            <image src="/images/icon/collection.png"></image>
+            <image class="share-img" src="/images/icon/share.png"></image>
+        </view>
+        <view class="horizon"></view>
+    </view>
+    <text class="detail">{{postData.detail}}</text>
+</view>
