--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -10,7 +10,8 @@
     <text class="title">{{postData.title}}</text>
     <view class="tool">
         <view class="circle-image">
-            <image src="/images/icon/collection.png"></image>
+            <image wx:if="{{collected}}" catchtap="onColletionTap" src="/images/icon/collection.png"></image>
+            <image wx:else catchtap="onColletionTap" src="/images/icon/collection-anti.png"></image>
             <image class="share-img" src="/images/icon/share.png"></image>
         </view>
         <view class="horizon"></view>
