--- a/pages/posts/post-detail/post-detail.wxml
+++ b/pages/posts/post-detail/post-detail.wxml
@@ -1,6 +1,6 @@
 <view class="container">
-    <image class="head-image" src="{{postData.headImgSrc}}"></image>
-    <image class="audio"  src="/images/music/music-start.png"></image>
+    <image class="head-image" src="{{isPlayingMusic?postData.music.coverImg:postData.headImgSrc}}"></image>
+    <image class="audio" catchtap="onMusicTap" src="{{isPlayingMusic? '/images/music/music-stop.png' : '/images/music/music-start.png'}}"></image>
     <view class="author-date">
         <image class="avatar" src="{{postData.avatar}}"></image>
         <text class="author">{{postData.author}}</text>
@@ -12,7 +12,7 @@
         <view class="circle-image">
             <image wx:if="{{collected}}" catchtap="onColletionTap" src="/images/icon/collection.png"></image>
             <image wx:else catchtap="onColletionTap" src="/images/icon/collection-anti.png"></image>
-            <image class="share-img" src="/images/icon/share.png"></image>
+            <image catchtap="onShareTap" class="share-img" src="/images/icon/share.png"></image>
         </view>
         <view class="horizon"></view>
     </view>
