--- a/pages/movies/movie/movie-template.wxml
+++ b/pages/movies/movie/movie-template.wxml
@@ -1,8 +1,8 @@
 <import src="../stars/stars-template.wxml" />
 <template name="movieTemplate">
-    <view class="classname">
-        <image src="/images/wukong.png"></image>
-        <text>悟空传</text>
+    <view class="movie-container">
+        <image class="movie-img" src="/images/wukong.png"></image>
+        <text class="movie-title">悟空传</text>
         <template is="starsTemplate" />
     </view>
 </template>
