--- a/pages/movies/movie-list/movie-list-template.wxml
+++ b/pages/movies/movie-list/movie-list-template.wxml
@@ -3,8 +3,8 @@
     <view class="movie-list-container">
         <view class="inner-container">
             <view class="movie-head">
-                <text class="slogan">正在热映</text>
-                <view class="more">
+                <text class="slogan">{{categoryTitle}}</text>
+                <view catchtap="onMoreTap" class="more" data-category="{{categoryTitle}}">
                     <text class="more-text">更多</text>
                     <image class="more-img" src="/images/icon/arrow-right.png"></image>
                 </view>
