--- a/pages/movies/movie-grid/movie-grid-template.wxml
+++ b/pages/movies/movie-grid/movie-grid-template.wxml
@@ -1,10 +1,10 @@
 <import src="../movie/movie-template.wxml" />
 <template name="movieGridTemplate">
-    <view class="grid-container">
+    <scroll-view class="grid-container" scroll-x="{{false}}" scroll-y="true" bindscrolltolower="onScrollLower">
         <block wx:for="{{movies}}" wx:for-item="movie"> 
             <view class="single-view-container">
                 <template is="movieTemplate" data="{{...movie}}"/>
             </view>
         </block>
-    </view>
+    </scroll-view>
 </template>
