--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,5 +1,11 @@
 <import src="movie-list/movie-list-template.wxml" />
-<view class="container">
+<import src="movie-grid/movie-grid-template.wxml" />
+<view class="search">
+    <icon type="search" class="search-img" size="13" color="#405f80" />
+    <input type="search" placeholder="悟空传、神奇女侠" placeholder-class="placeholder" bindfocus="onBindFocus"  bindconfirm="onBindFirm" />
+    <image wx:if="{{searchPanelShow}}" src="/images/icon/xx.png" bindtap="conCancelImgTap" class="xx-img"></image>
+</view>
+<view class="container" wx:if="{{containerShow}}">
     <view class="movies-template">
         <template is="movieListTemplate" data="{{...inTheaters}}"/>
     </view>
@@ -9,4 +15,8 @@
     <view class="movies-template">
         <template is="movieListTemplate" data="{{...top250}}"/>
     </view>
+</view>
+
+<view class="search-panel" wx:if="{{searchPanelShow}}">
+    <template is="movieGridTemplate" data="{{...searchResult}}" />
 </view>
